New functions to ezk bash git and maven